<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Pollen UK</string>

  <string name="map">Map</string>
  <string name="settings">Settings</string>

  <string name="no_connection">No connection</string>
  <string name="no_wifi">No WiFi</string>
  <string name="roaming">Roaming</string>
  <string name="updated">Updated %s</string>

  <string name="pref_update_category">Update</string>
  <string name="pref_wifi">WiFi</string>
  <string name="pref_wifi_summ">Update on WiFi only</string>
  <string name="pref_roaming">Roaming</string>
  <string name="pref_roaming_summ">Update while roaming</string>

</resources>
